src/objects/SPE2_SurveyRespondentAnswers__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Data</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>SPE2_SurveyRespondentAnswers</relationshipLabel>
        <relationshipName>SPE2_SurveyRespondentAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionBank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipLabel>SPE2_SurveyRespondentAnswers</relationshipLabel>
        <relationshipName>SPE2_SurveyRespondentAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SPE2_SurveyRespondentAnswers</relationshipLabel>
        <relationshipName>SPE2_SurveyRespondentAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>SPE2Survey__c</referenceTo>
        <relationshipLabel>SPE2_SurveyRespondentAnswers</relationshipLabel>
        <relationshipName>SPE2_SurveyRespondentAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Respondent Answers</label>
    <nameField>
        <displayFormat>SRA - {0000}</displayFormat>
        <label>SPE2_SurveyRespondentAnswers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE2_SurveyRespondentAnswers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>